# Drive-Thru-Agent

./: .env  .gitignore  README.md  app.py  catalogo.json  main.py  pyproject.toml  test_kokoro.py
services/: llm_agent.py  microphone.py
services/db/: db.py  embeddings.py  importador_db.py
services/text_utils/: kokoro_tts.py  sanitize_text.py  speech_to_text.py  text_to_speech.py
