[project]
name = "drive-thru-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "kokoro>=0.9.4",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pyaudio>=0.2.14",
    "pyttsx3>=2.99",
    "sentence-transformers>=5.0.0",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "uvicorn>=0.35.0",
]
